--- a/app/src/main/res/layout/view_admin_request_list.xml
+++ b/app/src/main/res/layout/view_admin_request_list.xml
@@ -1,84 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="82dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:elevation="20dp"
+    android:fadingEdgeLength="2dp"
+    app:cardCornerRadius="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:id="@+id/admin_request_views_id"/>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="20dp"
-        android:fadingEdgeLength="2dp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="10dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingVertical="20dp"
+        android:paddingHorizontal="28dp">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="20dp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/admin_request_views_to"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="1.5dp"
-                    android:text="Sender:                     "/>
-                <TextView
-                    android:id="@+id/admin_request_views_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="1.5dp"
-                    android:text="Request Type: "/>
+        <TextView
+            android:id="@+id/admin_request_views_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
 
-            </LinearLayout>
-            <View
-                android:layout_weight="0.005"
-                android:layout_marginVertical="10dp"
-                android:background="@drawable/shape_rectangle"
-                android:layout_width="2dp"
-                android:layout_height="match_parent"/>
-            <LinearLayout
-                android:layout_weight="1"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="20dp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        <TextView
+            android:id="@+id/admin_request_views_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="1.5dp"
+            android:text="Sender: Devid" />
 
-                <TextView
-                    android:id="@+id/admin_request_views_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="1.5dp"
-                    android:text="Date: "/>
-                <TextView
-                    android:id="@+id/admin_request_view_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="1.5dp"
-                    android:text="Checked By: "/>
-            </LinearLayout>
+        <TextView
+            android:id="@+id/admin_request_views_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="1.5dp"
+            android:text="Request Type: Plant" />
 
+
+        <TextView
+            android:id="@+id/admin_request_views_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="1.5dp"
+            android:text="Date: 25 Aug 2023" />
+
+        <TextView
+            android:id="@+id/admin_request_view_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="1.5dp"
+            android:text="Checked By: " />
+
+        <TextView
+            android:id="@+id/admin_request_views_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Message ---------------------------------------------------" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/admin_request__image_stared"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/outline_star_unclickerd_24"/>
 
-</LinearLayout>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
